KeePassDroid (2.6.9.1) 
 * Update Chinese and Russian translations

KeePassDroid (2.6.9)
 * Decode recent URIs in background thread
 * Fix crash cleaning file cache on API level <26
 * Catch search failure instead of crashing

KeePassDroid (2.6.8.4)
 * Update Russian localization

KeePassDroid (2.6.8.3)
 * Improve icon selection readability
 * Update Simplified Chinese localization

KeePassDroid (2.6.8.2)
 * Fix broken notifications
 * Request runtime notification permissions

KeePassDroid (2.6.8.1)
 * Update to target SDK 34

KeePassDroid (2.6.8)
 * Fix crashes
 * Prevent downgrading databases

KeePassDroid (2.6.7)
 * Update Chinese and Russian translations
 * Update to target SDK version 31

KeePassDroid (2.6.6.1)
 * Add null checks

KeePassDroid (2.6.6)
 * Add more Android 11 warnings

KeePassDroid (2.6.5)
 * Fix implicit pending intent
 * Update donate link

KeePassDroid (2.6.4)
 * Fix crashes
 * Updated Chinese transaltions

KeePassDroid (2.6.3)
 * Add warning for Android 11 file handling

KeePassDroid (2.6.2)
 * Fix issue with saving biometric password

KeePassDroid (2.6.1)
 * Prevent crashes for certain URI types

KeePassDroid (2.6.0)
 * Update file handling for Android 11
 * Mark password clipboard entries as sensitive
 * Switch from Spongycastle to modern Bouncy Castle
 * Update Chinese, French, and Russian translations

KeePassDroid (2.5.17.2)
 * Revert to older version of biometric library

KeePassDroid (2.5.17.1)
 * Fix databases broken with missing AES KDF UUID

KeePassDroid (2.5.17)
 * Fix KDBX3 -> 4 upgrade

KeePassDroid (2.5.16.1)
 * Fix minimum db version

KeePassDroid (2.5.16)
 * Add KDBX 4.1 support

KeePassDroid (2.5.15)
 * Add Keyfile 2.0 support
 * Add Argon2 ID key derivation

KeePassDroid (2.5.14)
 * Fix Google Drive compatibility

KeePassDroid (2.5.13)
 * Ensure output files are truncated

KeePassDroid (2.5.12)
 * Fix storing password with biometrics

KeePassDroid (2.5.11)
 * Fix crash on invalid length databases

KeePassDroid (2.5.10)