@@ -1,3 +1,5 @@
+ * Fix recent files concurrency issues
+
 KeePassDroid (2.6.9.1) 
  * Update Chinese and Russian translations
 
